kustomize/service.yml
apiVersion: v1
kind: Service
metadata:
  name: howmuch
spec:
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app: howmuch
  type: ClusterIP
