kustomize/ingressroute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: howmuch
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`howmuch.duckdns.org`)
    kind: Rule
    services:
    - name: howmuch
      port: 8000
  tls:
    secretName: howmuch.duckdns.org
